[package]
name = "demo"
version = "0.1.0"
edition = "2021"
authors = ["MongoExpUser <mongoexpuser@domain.com>"]
description = "Rust Container Project for NAPI-Rust"
documentation = "https://github.com/MongoExpUser/Debian-Based-NAPI-Rust-Addons/blob/main/README.md"
rust-version = "1.62.0"
license = "MIT"
keywords = ["napi", "rust", "node.js"]
categories = ["napi-rust"]

[lib]
crate-type = ["cdylib"] # ddl/so
path = "src/lib.rs"     # The source file of the target

[dependencies]
napi = "2"
napi-derive = "2"

[build-dependencies]
napi-build = "1"
