[package]
name = "napi-rust-demo"
version = "0.1.0"
edition = "2021"
authors = ["MongoExpUser <MongoExpUser@users.noreply.github.com>"]
description = "Rust Container Project for NAPI-Rust"
documentation = "https://github.com/MongoExpUser/Debian-Based-NAPI-Rust-Addons/blob/main/README.md"
rust-version = "1.62.0"
license = "MIT"
keywords = ["napi", "rust", "node.js"]
categories = ["napi-rust"]

[lib]
crate-type = ["cdylib"] # ddl/so
#path = "src/lib.rs"    # The source file of the target
time = "0.3.11"
regex = "1.6.0"
rand = "0.8.5"

[dependencies]
napi = "2"
napi-derive = "2"

[build-dependencies]
napi-build = "1"
